--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,1 +1,129 @@
-<p>customers works!</p>
+
+<div class="row">
+<div class="col-md-10">
+    <h1>Customers</h1>
+    <button class="btn btn-primary br" data-bs-target="#mymodal" data-bs-toggle="modal">Create customer</button>
+    <table class="table table-hovered">
+        <tr class="fw-bold p-5 fs-5">
+            <th>Customer Name</th>
+            <th>Customer Branch</th>
+            <th>Customer Email</th>
+            <th>Customer Mobile</th>
+            <th>Manage</th>
+        </tr>
+        <tr class="fw-bold p-5" *ngFor="let b of customersWithBranches">
+            <td>{{b.name}}</td>
+            <td>{{b.branchName}}</td>
+            <td>{{b.email}}</td>
+            <td>{{b.mobile}}</td>
+            <td>
+                <div class="button-group">
+                    <button class="btn btn-warning btn-spacing">Edit</button>
+                    <button class="btn btn-danger btn-spacing">Delete</button>
+                </div>
+            </td>
+        </tr>
+    </table>
+</div>
+
+<!-- Modal Code Remains Unchanged -->
+<div class="modal fade" id="mymodal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 style="color: black; font-weight: bold;">Create New Customer</h3>
+                <button class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form #signupForm="ngForm" (ngSubmit)="registernow()">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label style="color: black; font-weight: bold;" class="form-control-label">Username</label>
+                                <input  type="text" id="username" name="username" placeholder="Username"
+                                    class="form-control" [(ngModel)]="username" required />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label style="color: black; font-weight: bold;" class="form-control-label">Email</label>
+                                <input type="email" id="email" name="email" placeholder="Email" class="form-control"
+                                    [(ngModel)]="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label style="color: black; font-weight: bold;" class="form-control-label">Phone Number</label>
+                                <input type="text" id="mobile" name="mobile" placeholder="Mobile" class="form-control"
+                                    [(ngModel)]="mobile" pattern="[0-9]{10}" required />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label style="color: black; font-weight: bold;" class="form-control-label">Password</label>
+                                <input type="password" id="psw" name="psw" placeholder="Password" class="form-control"
+                                    [(ngModel)]="password" required />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label style="color: black; font-weight: bold;" class="form-control-label">Account type</label>
+                                <select name="acc" id="accounttype" [(ngModel)]="accounttype" class="form-select">
+                                    <option disabled selected>Account type</option>
+                                    <option style="color: black; font-weight: bold;" value="savings">Savings</option>
+                                    <option style="color: black; font-weight: bold;" value="current">Current</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label style="color: black; font-weight: bold;" class="form-control-label">Opening Balance</label>
+                                <input type="text" id="bal" name="bal" placeholder="Opening Balance"
+                                    class="form-control" [(ngModel)]="availableBalance" pattern="[0-9]{2,}" required />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label style="color: black; font-weight: bold;" class="form-control-label">Gender</label>
+                                <select name="gen" id="gender" [(ngModel)]="gender" class="form-select">
+                                    <option disabled selected>Gender</option>
+                                    <option style="color: black; font-weight: bold;" value="male">Male</option>
+                                    <option style="color: black; font-weight: bold;" value="female">Female</option>
+                                    <option style="color: black; font-weight: bold;" value="no">Prefer Not to Say</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label style="color: black; font-weight: bold;" class="form-control-label">Branches</label>
+                                <select [(ngModel)]="selectedBranchId" name="selectedBranchId" id="selectedBranchId"
+                                    class="form-select" required>
+                                    <option value="" disabled selected>Select a branch</option>
+                                    <option style="color: black; font-weight: bold;" *ngFor="let branch of branches" [value]="branch._id">{{ branch.branchName }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label style="color: black; font-weight: bold;" class="form-control-label">Confirm Password</label>
+                        <input type="password" id="cpsw" name="cpsw" placeholder="Confirm Password" class="form-control"
+                            [(ngModel)]="confirmPassword" required />
+                    </div>
+                    <div class="row justify-content-center my-3 px-3">
+                        <button style="font-weight: bold; color: white;" type="submit" class="btn btn-primary" [disabled]="signupForm.invalid"
+                            data-bs-dismiss="modal">
+                            Save Customer
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
