--- a/src/app/employee/employee.component.html
+++ b/src/app/employee/employee.component.html
@@ -1,1 +1,116 @@
-<p>employee works!</p>
+
+<div class="row"></div>
+<div class="col-md-8">
+    <h1>Employees</h1>
+    <button style="margin-left: 40%; margin-top: 10px;" class="btn btn-primary br" data-bs-target="#mymodal" data-bs-toggle="modal">Create Employee</button>
+    <table class="table table-hover">
+        <thead>
+            <tr class="fw-bold p-5 fs-5">
+                <th>Employee Name</th>
+                <th>Employee Branch</th>
+                <th>Employee Email</th>
+                <th>Employee Mobile</th>
+                <th>Manage</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr style="font-size: 16px;" class="fw-bold p-5" *ngFor="let b of employeesWithBranches">
+                <td>{{b.name}}</td>
+                <td>{{b.branchName}}</td>
+                <td>{{b.email}}</td>
+                <td>{{b.mobile}}</td>
+                <td>
+                    <div class="d-flex">
+                        <button class="btn btn-warning me-2">Edit</button>
+                        <button class="btn btn-danger">Delete</button>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<!-- <--Modal for creating a new employee -->
+<div class="modal fade" id="mymodal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Create New Employee</h3>
+                <button class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <form #signupForm="ngForm" (ngSubmit)="registernow()">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="form-control-label text-muted">Username</label>
+                                <input type="text" id="username" name="username" placeholder="Username"
+                                    class="form-control" [(ngModel)]="username" required />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="form-control-label text-muted">Email</label>
+                                <input type="email" id="email" name="email" placeholder="Email" class="form-control"
+                                    [(ngModel)]="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="form-control-label text-muted">Mobile</label>
+                                <input type="text" id="mobile" name="mobile" placeholder="Mobile" class="form-control"
+                                    [(ngModel)]="mobile" pattern="[0-9]{10}" required />
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="form-control-label text-muted">Password</label>
+                                <input type="password" id="psw" name="psw" placeholder="Password" class="form-control"
+                                    [(ngModel)]="password" required />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="form-control-label text-muted">Gender</label>
+                                <select name="gen" id="gender" [(ngModel)]="gender" class="form-select">
+                                    <option disabled selected>Gender</option>
+                                    <option value="male">Male</option>
+                                    <option value="female">Female</option>
+                                    <option value="no">Prefer Not to Say</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="form-control-label text-muted">Branches</label>
+                                <select [(ngModel)]="selectedBranchId" name="selectedBranchId" id="selectedBranchId"
+                                    class="form-select" required>
+                                    <option value="" disabled selected>Select a branch</option>
+                                    <option *ngFor="let branch of branches" [value]="branch._id">{{ branch.branchName }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="form-control-label text-muted">Confirm Password</label>
+                        <input type="password" id="cpsw" name="cpsw" placeholder="Confirm Password" class="form-control"
+                            [(ngModel)]="confirmPassword" required />
+                    </div>
+
+                    <div class="row justify-content-center my-3 px-3">
+                        <button type="submit" class="btn btn-primary" [disabled]="signupForm.invalid">
+                            Signup to BudgetBuddy
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
