--- a/src/app/userhome/userhome.component.html
+++ b/src/app/userhome/userhome.component.html
@@ -1,56 +1,70 @@
 <div class="container-fluid">
-    <div class="row">
-      <div>
-        <h1>Welcome {{ user.name }}</h1>
-        <br />
+  <div class="row">
+    <div>
+      <h1 class="fw-bold">Welcome {{ user.name }}</h1>
+      <br />
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-4 col-12 col-xl-5">
+      <br>
+      <div class="card bg-c-blue order-card">
+        <br>
+        <div class="card-block">
+          <h4 class="m-b-20 fw-bold text-black">Amount</h4>
+          <h2 class="text-right"><img src="assets/images/rupee.png" class="f-left" height="50" width="50" alt="">
+            <span class="fw-bold">{{user.availableBalance}}</span>
+          </h2>
+          <p class="m-b-2 pt-3 fw-bold text-black fs-5">Available Balance</p>
+
+        </div>
       </div>
     </div>
-  
-    <div class="row">
-      <div class="col-md-4 col-12 col-xl-3">
-          <div class="card bg-c-blue order-card">
-              <div class="card-block">
-                  <h6 class="m-b-20">Amount</h6>
-                  <h2 class="text-right"><img src="assets/images/rupee.png" class="f-left" height="30" width="30" alt=""> <span>{{user.availableBalance}}</span></h2>
-                  <p class="m-b-0" style="margin-left: 20px;">Available Balance</p>
-                 
-              </div>
-          </div>
+
+    <div class="col-md-4 col-12 col-xl-5">
+      <br>
+      <div class="card bg-c-green order-card">
+        <br>
+        <div class="card-block">
+          <h4 class="m-b-20 fw-bold text-black">Transactions</h4>
+          <h2 class="text-right"> <img src="assets/images/credit.png" class="f-left" height="70" width="70" alt="">
+            <span class="fw-bold">{{len}}</span>
+          </h2>
+          <p class="m-b-2 pt-3 fw-bold text-black fs-5">Total No of Transactions</p>
+        </div>
       </div>
-      
-      <div class="col-md-4 col-12 col-xl-3">
-          <div class="card bg-c-green order-card">
-              <div class="card-block">
-                  <h6 class="m-b-20">Transactions</h6>
-                  <h2 class="text-right"> <img src="assets/images/credit.png" class="f-left" height="50" width="50" alt=""> <span>{{len}}</span></h2>
-                  <p class="m-b-0">Total No of Transactions</p>
-              </div>
-          </div>
+    </div>
+
+    <div class="col-md-4 col-12 col-xl-5">
+      <br>
+      <div class="card bg-c-yellow order-card">
+        <br>
+        <div class="card-block">
+          <h4 class="m-b-20 fw-bold text-black">Spendings</h4>
+          <h2 class="text-right"><img src="assets/images/trans.webp" class="f-left" height="70" width="70"
+              alt=""><span class="fw-bold">{{spendingstotal}}</span></h2>
+          <p class="m-b-2 pt-3 fw-bold text-black fs-5">Total Spendings</p>
+        </div>
       </div>
-      
-      <div class="col-md-4 col-12 col-xl-3">
-          <div class="card bg-c-yellow order-card">
-              <div class="card-block">
-                  <h6 class="m-b-20">Spendings</h6>
-                  <h2 class="text-right"><img src="assets/images/trans.webp" class="f-left" height="50" width="50" alt=""><span>{{spendingstotal}}</span></h2>
-                  <p class="m-b-0">Total Spendings</p>
-              </div>
-          </div>
+    </div>
+
+    <div class="col-md-4 col-xl-5">
+      <br>
+      <div class="card bg-c-pink order-card">
+        <br>
+        <div class="card-block">
+          <h4 class="m-b-20 fw-bold text-black">Rewards</h4>
+          <h2 class="text-right"><img src="assets/images/rewards.png" class="f-left" height="70" width="70"
+              alt=""><span class="fw-bold">8</span></h2>
+          <p class="m-b-2 pt-3 fw-bold text-black fs-5">Reward Points</p>
+        </div>
       </div>
-      
-      <div class="col-md-4 col-xl-3">
-          <div class="card bg-c-pink order-card">
-              <div class="card-block">
-                  <h6 class="m-b-20">Rewards</h6>
-                  <h2 class="text-right"><img src="assets/images/rewards.png" class="f-left" height="50" width="50" alt=""><span>8</span></h2>
-                  <p class="m-b-0">Reward Points</p>
-              </div>
-          </div>
-      </div>
+    </div>
   </div>
-  
-  
-    <!-- <div class="row">
+
+
+  <!-- <div class="row">
       
         <div class="col-md-3">
           <div class="card tr1">
@@ -82,12 +96,11 @@
           <a  routerLink="/navbar/expencetracking">View More</a>
         </div>
       </div> -->
-    
-     
-    </div>
-  
-   
-  
-  <br />
-  <br />
-  
+
+
+</div>
+
+
+
+<br />
+<br />
