--- a/src/app/branches/branches.component.html
+++ b/src/app/branches/branches.component.html
@@ -1,1 +1,91 @@
-<p>branches works!</p>
+<div class="container mt-5">
+    <div class="row g-6" style="background-color: #4784df;"> <!-- Added Bootstrap gap class g-4 for space -->
+        <!-- Branches Table -->
+        <div class="col-lg-12 col-md-12 mb-4"> <!-- Added 'pe-lg-4' for right padding -->
+            <br>
+            <h1 class="p-4">Branches</h1>
+            
+            <table class="table table-hover mt-3">
+                <thead>
+                    <tr class="fw-bold p-5 fs-5">
+                        <th>Branch Name</th>
+                        <th>Branch IFSC Code</th>
+                        <th>Branch Address</th>
+                        <th>Branch Phone</th>
+                        <th>Branch Manager</th>
+                        <th>Manage</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="fw-bold p-4" *ngFor="let b of branches">
+                        <td>{{b.branchName}}</td>
+                        <td>{{b.ifscCode}}</td>
+                        <td>{{b.address}}</td>
+                        <td>{{b.contactDetails}}</td>
+                        <td>{{b.branchManager}}</td>
+                        <td>
+                            <div class="d-flex">
+                                <button class="btn btn-warning me-2">Edit</button>
+                                <button class="btn btn-danger">Delete</button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+        
+        <!-- Create New Branch Form -->
+
+        <div style="border-radius: 20px;" class="col-md-6 m-3"> <!-- Added 'mt-4' for margin-top on smaller screens -->
+            <br>
+            <div class="card p-4" style="background-color: #f7f9fc;">
+                <h3 style="color: #286ed6;" class="fw-bold"><img src="">Create New Branch</h3>
+                <form (ngSubmit)="addbranch()">
+                    <div class="form-group mb-3">
+                        <label class="fw-bold">Branch Name</label>
+                        <input style="border-radius: 10px;" type="text" class="form-control" name="bname" [(ngModel)]="bName" placeholder="Branch Name">
+                    </div>
+                    <div class="form-group mb-3">
+                        <label class="fw-bold">IFSC Code</label>
+                        <input style="border-radius: 10px;" type="text" class="form-control" name="ifsc" [(ngModel)]="ifsc" placeholder="Branch IFSC Code">
+                    </div>
+                    <div class="form-group mb-3">
+                        <label class="fw-bold">Address</label>
+                        <input style="border-radius: 10px;" type="text" class="form-control" name="addr" [(ngModel)]="baddress" placeholder="Branch Address">
+                    </div>
+                    <div class="form-group mb-3">
+                        <label class="fw-bold">Branch Manager</label>
+                        <input style="border-radius: 10px;" type="text" class="form-control" name="bman" [(ngModel)]="bmanager" placeholder="Branch Manager">
+                    </div>
+                    <div class="form-group mb-3">
+                        <label class="fw-bold">Branch Contact Details</label>
+                        <input style="border-radius: 10px;" type="text" class="form-control" name="bcon" [(ngModel)]="bcontact" placeholder="Branch Contact Details">
+                    </div>
+                    <div class="form-group d-flex justify-content-end">
+                        <button style="border-radius: 10px;" class="btn btn-success fw-bold" type="submit" data-bs-dismiss="modal">Submit</button>
+                        <button style="border-radius: 10px;" class="btn btn-danger ms-2 fw-bold">Cancel</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+            <div class="col-md-5 d-flex justify-content-center">
+                <img class="img-fluid im" src="https://mettisglobal.news/wp-content/uploads/2024/05/IMG15636news28.jpg">
+            </div>
+        
+    </div>
+</div>
+
+<!-- Modal remains unchanged -->
+<div class="modal fade" id="mymodal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>Create New Branch</h3>
+                <button class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <!-- Form code here remains unchanged -->
+            </div>
+        </div>
+    </div>
+</div>
