--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -1,43 +1,44 @@
-
-
+<br><br>
+<br><br>
 <div class="row d-flex justify-content-center">
-    <div class="col-md-6">
+    <div class="col-md-8">
         <form action="" (ngSubmit)="getDetails()">
             <div class="form-group">
-                <label for="email">Username</label>
-                <input type="text" class="form-control" name="uname"  placeholder="Enter Username" [(ngModel)]="username" id="uname" required>
+                <label class="fs-1 fw-bold" style="color: #4188d4;;" for="email">Username</label>
+                <br>
+                <input style="border-radius: 25px;" type="text" class="form-control fs-5 p-4" name="uname" placeholder="Enter Username"
+                    [(ngModel)]="username" id="uname" required>
             </div>
             <div class="form-group">
-                <button class="btn btn-primary">Check</button>
-            </div>      
+                <button style="border-radius: 15px; margin-left: 43%;" class="btn btn-primary p-2 fs-5">Check</button>
+            </div>
         </form>
     </div>
 </div>
+<br>
 
-
-<div class="row" *ngIf="user">
+<div class="row d-flex justify-content-center" *ngIf="user">
     <div class="col-md-6">
-        
-<table class="table table-bordered">
-    <tr>
-        <td>Id </td>
-        <td>{{user._id}}</td>
-    </tr>
-    <tr>
-        <td>Name</td>
-        <td>{{user.name}}</td>
-    </tr>
-    <tr>
-        <td>Email </td>
-        <td> {{user.email}}</td>
-    </tr>
-   
-   
-</table>
+
+        <table class="table table-bordered">
+            <tr>
+                <td class="p-3">Id </td>
+                <td class="text-black fw-bold p-3">{{user._id}}</td>
+            </tr>
+            <tr>
+                <td class="p-3">Name</td>
+                <td class="text-black fw-bold">{{user.name}}</td>
+            </tr>
+            <tr>
+                <td class="p-3">Email </td>
+                <td class="text-black fw-bold"> {{user.email}}</td>
+            </tr>
+
+
+        </table>
     </div>
 </div>
 
 <ng-template #elseBlock>
     <h1>user not found</h1>
 </ng-template>
-
