--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,148 +1,204 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <!-- Logo and Bank Name on the Left -->
-      <a class="navbar-brand" href="#">
-        <img src="https://static.vecteezy.com/system/resources/thumbnails/013/948/616/small_2x/bank-icon-logo-design-vector.jpg" alt="Bank Logo" width="50" height="50">
-        SecureWay Bank
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <div class="container">
+    <!-- Logo and Bank Name on the Left -->
+    <a class="navbar-brand" href="#">
+      <img src="https://tse4.mm.bing.net/th?id=OIP.y_ouE8HGkFKIhBRddH2mmwHaFP&pid=Api&P=0&h=180" alt="Bank Logo"
+        width="50" height="50">
+      Tech Bank
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-      <!-- Login Button on the Far Right -->
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <button class="btn btn-primary" routerLink="/login">Login</button>
-          </li>
+    <!-- Login Button on the Far Right -->
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <button class="btn btn-primary" routerLink="/login">Login</button>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<!-- Middle Section -->
+<section class="middle">
+  <div class="container">
+    <h1>Welcome to Tech Bank</h1>
+    <p> WE value your trust as much as you value your savings</p>
+    <a href="#" class="btn btn-lg btn-light">Learn More</a>
+  </div>
+</section>
+
+<!-- Services Section -->
+<!-- <section class="services">
+  <div class="container">
+    <h2>Our Services</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="service-box">
+          <h3>Personal Banking</h3>
+          <p>Experience seamless banking with our personal banking services.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="service-box">
+          <h3>Business Banking</h3>
+          <p>Grow your business with our tailored business banking solutions.</p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="service-box">
+          <h3>Loans and Investments</h3>
+          <p>Secure your future with our diverse loan and investment options.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section> -->
+
+<section class="services">
+  <div class="container">
+    <h2 class="text-center">Explore Our Services</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="service-box">
+          <i class="fa fa-user-circle service-icon"></i>
+          <h3>Personal Banking</h3>
+          <p>Experience seamless banking with our personal banking services tailored just for you.</p>
+          <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="service-box">
+          <i class="fa fa-briefcase service-icon"></i>
+          <h3>Business Banking</h3>
+          <p>Grow your business with our tailored business banking solutions that meet your needs.</p>
+          <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="service-box">
+          <i class="fa fa-money-bill-wave service-icon"></i>
+          <h3>Loans and Investments</h3>
+          <p>Secure your future with our diverse loan and investment options designed for growth.</p>
+          <a href="#" class="btn btn-primary">Learn More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- This is Login Modal -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalLabel">Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Select user type:</p>
+        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#employeeLoginModal"
+          data-bs-dismiss="modal">Employee Login</button>
+        <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#customerLoginModal"
+          data-bs-dismiss="modal">Customer Login</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- This is Employee Login Modal -->
+<div class="modal fade" id="employeeLoginModal" tabindex="-1" aria-labelledby="employeeLoginModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="employeeLoginModalLabel">Employee Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="employeeEmail" class="form-label">Email</label>
+            <input type="email" class="form-control" id="employeeEmail" required>
+          </div>
+          <div class="mb-3">
+            <label for="employeePassword" class="form-label">Password</label>
+            <input type="password" class="form-control" id="employeePassword" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- This is Customer Login Modal -->
+<div class="modal fade" id="customerLoginModal" tabindex="-1" aria-labelledby="customerLoginModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="customerLoginModalLabel">Customer Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="customerEmail" class="form-label">Email</label>
+            <input type="email" class="form-control" id="customerEmail" required>
+          </div>
+          <div class="mb-3">
+            <label for="customerPassword" class="form-label">Password</label>
+            <input type="password" class="form-control" id="customerPassword" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- this is Footer Section -->
+<footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-10">
+        <h5 style="color: aliceblue;">Contact Us</h5>
+        <p>Email: <code>TechBank&copy;gmail.com</code> </p>
+        <p>Phone: +91 8790841178</p>
+      </div>
+      <div class="col-md-4">
+        <h5 style="color: aliceblue;">Follow Us</h5>
+        <ul class="list-unstyled">
+          <li><a href="facebook.com"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                viewBox="0 0 128 128">
+                <rect width="118.35" height="118.35" x="4.83" y="4.83" fill="#3d5a98" rx="6.53" ry="6.53" />
+                <path fill="#fff"
+                  d="M86.48 123.17V77.34h15.38l2.3-17.86H86.48v-11.4c0-5.17 1.44-8.7 8.85-8.7h9.46v-16A127 127 0 0 0 91 22.7c-13.62 0-23 8.3-23 23.61v13.17H52.62v17.86H68v45.83z" />
+              </svg>Facebook</a></li>
+          <li><a href="twitter.com"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                viewBox="0 0 256 256">
+                <g fill="none">
+                  <rect width="256" height="256" fill="#fff" rx="60" />
+                  <rect width="256" height="256" fill="#1d9bf0" rx="60" />
+                  <path fill="#fff"
+                    d="M199.572 91.411c.11 1.587.11 3.174.11 4.776c0 48.797-37.148 105.075-105.075 105.075v-.03A104.54 104.54 0 0 1 38 184.677q4.379.525 8.79.533a74.15 74.15 0 0 0 45.865-15.839a36.98 36.98 0 0 1-34.501-25.645a36.8 36.8 0 0 0 16.672-.636c-17.228-3.481-29.623-18.618-29.623-36.198v-.468a36.7 36.7 0 0 0 16.76 4.622c-16.226-10.845-21.228-32.432-11.43-49.31a104.8 104.8 0 0 0 76.111 38.582a36.95 36.95 0 0 1 10.683-35.283c14.874-13.982 38.267-13.265 52.249 1.601a74.1 74.1 0 0 0 23.451-8.965a37.06 37.06 0 0 1-16.234 20.424A73.5 73.5 0 0 0 218 72.282a75 75 0 0 1-18.428 19.13" />
+                </g>
+              </svg>Twitter</a></li>
+          <li><a href="linkedin.com"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
+                viewBox="0 0 256 256">
+                <path fill="#0a66c2"
+                  d="M218.123 218.127h-37.931v-59.403c0-14.165-.253-32.4-19.728-32.4c-19.756 0-22.779 15.434-22.779 31.369v60.43h-37.93V95.967h36.413v16.694h.51a39.91 39.91 0 0 1 35.928-19.733c38.445 0 45.533 25.288 45.533 58.186zM56.955 79.27c-12.157.002-22.014-9.852-22.016-22.009s9.851-22.014 22.008-22.016c12.157-.003 22.014 9.851 22.016 22.008A22.013 22.013 0 0 1 56.955 79.27m18.966 138.858H37.95V95.967h37.97zM237.033.018H18.89C8.58-.098.125 8.161-.001 18.471v219.053c.122 10.315 8.576 18.582 18.89 18.474h218.144c10.336.128 18.823-8.139 18.966-18.474V18.454c-.147-10.33-8.635-18.588-18.966-18.453" />
+              </svg>LinkedIn</a></li>
         </ul>
       </div>
     </div>
-  </nav>
-
-  <!-- Middle Section -->
-  <section class="middle">
-    <div class="container">
-      <h1>Welcome to SecureWay Bank</h1>
-      <p>Your trusted partner for secure and reliable banking services.</p>
-      <a href="#" class="btn btn-lg btn-light">Learn More</a>
-    </div>
-  </section>
-
-  <!-- Services Section -->
-  <section class="services">
-    <div class="container">
-      <h2>Our Services</h2>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="service-box">
-            <h3>Personal Banking</h3>
-            <p>Experience seamless banking with our personal banking services.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <h3>Business Banking</h3>
-            <p>Grow your business with our tailored business banking solutions.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="service-box">
-            <h3>Loans and Investments</h3>
-            <p>Secure your future with our diverse loan and investment options.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- This is Login Modal -->
-  <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="loginModalLabel">Login</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <p>Select user type:</p>
-          <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#employeeLoginModal" data-bs-dismiss="modal">Employee Login</button>
-          <button class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#customerLoginModal" data-bs-dismiss="modal">Customer Login</button>
-        </div>
-      </div>
+    <div class="text-center mt-4">
+      <p>&copy; 2024 Tech Bank. All rights reserved.</p>
     </div>
   </div>
-
-  <!-- This is Employee Login Modal -->
-  <div class="modal fade" id="employeeLoginModal" tabindex="-1" aria-labelledby="employeeLoginModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="employeeLoginModalLabel">Employee Login</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="mb-3">
-              <label for="employeeEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="employeeEmail" required>
-            </div>
-            <div class="mb-3">
-              <label for="employeePassword" class="form-label">Password</label>
-              <input type="password" class="form-control" id="employeePassword" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- This is Customer Login Modal -->
-  <div class="modal fade" id="customerLoginModal" tabindex="-1" aria-labelledby="customerLoginModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="customerLoginModalLabel">Customer Login</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="mb-3">
-              <label for="customerEmail" class="form-label">Email</label>
-              <input type="email" class="form-control" id="customerEmail" required>
-            </div>
-            <div class="mb-3">
-              <label for="customerPassword" class="form-label">Password</label>
-              <input type="password" class="form-control" id="customerPassword" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Login</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- this is Footer Section -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h5>Contact Us</h5>
-          <p>Email: <code>SecureWay&copy;gmail.com</code> </p>
-          <p>Phone: +91 9391165044</p>
-        </div>
-        <div class="col-md-4">
-          <h5>Follow Us</h5>
-          <ul class="list-unstyled">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">LinkedIn</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="text-center mt-4">
-        <p>&copy; 2024 Thunder Bank. All rights reserved.</p>
-      </div>
-    </div>
-  </footer>
+</footer>
