--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,209 +1,151 @@
 <div class="back py-5">
-    <div class="container px-4 py-3 mx-auto">
-      <div class="card card0">
-        <div class="d-flex flex-lg-row flex-column-reverse">
-          <div class="card card2">
-            <div class="my-auto mx-md-5 px-md-5 right">
-              <div class="row justify-content-center px-3 mb-3">
-                <img
-                  class="rounded img-fluid"
-                  id="logoLeft"
-                  src="assets/banklogo.png"
-                />
-              </div>
-              <h3 class="mb-5 text-center heading text-white">
-                We are BudgetBuddy
-              </h3>
-              <h3 class="text-white">We are more than just a company</h3>
-              <small class="text-white">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                nisi ut aliquip ex ea commodo consequat.
-              </small>
+  <div class="container px-4 py-3 mx-auto">
+    <div class="card card0">
+      <div class="d-flex flex-lg-row flex-column-reverse">
+        <div class="card card2">
+          <div class="my-auto mx-md-5 px-md-5 right">
+            <div class="row justify-content-center px-3 mb-3">
+              <img class="rounded img-fluid" id="logoLeft"
+                src="https://tse3.mm.bing.net/th?id=OIP.XU0Q-x8juV67o4bbmw1GkwHaHa&pid=Api&P=0&h=180 " width=50% />
+            </div>
+            <h3 class="mb-5 text-center heading text-white fw-bold">
+              Welcome To Tech Banking
+            </h3>
+            <h3 class="text-white fw-bold">You are personal finance partner</h3>
+            <small class="text-white fw-bold" style="font-size: 15px;">
+              At BudgetBuddy, we help you take control of your finances with ease and confidence. Track your expenses,
+              plan your budget, and achieve your financial goals all in one place. Join us and be part of a community
+              that values smart money management!
+            </small>
+          </div>
+        </div>
+        <div class="card card1">
+          <div class="row justify-content-center my-auto">
+            <div class="col-md-8 col-10">
+              <h3 class="mb-5 text-center heading fw-bold">Create Tech banking Account</h3>
+              <h6 class="text-white fw-bold">Sign up with your email and start your financial journey</h6>
+
+              <form #signupForm="ngForm" (ngSubmit)="registernow()">
+
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <br>
+                      <label class="form-control-label text-white fw-bold fs-5">Username</label>
+                      <input type="text" id="username" name="username" placeholder="Username" class="form-control text-black"
+                        [(ngModel)]="username" required />
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <br>
+                      <label class="form-control-label text-white fw-bold fs-5">Email</label>
+                      <input type="email" id="email" name="email" placeholder="Email" class="form-control"
+                        [(ngModel)]="email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required />
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label class="form-control-label text-white fw-bold fs-5">MobileNo</label>
+                      <input type="text" id="mobile" name="mobile" placeholder="Mobile" class="form-control"
+                        [(ngModel)]="mobile" pattern="[0-9]{10}" required />
+
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label class="form-control-label text-white fw-bold fs-5">Password</label>
+                      <input type="password" id="psw" name="psw" placeholder="Password" class="form-control"
+                        [(ngModel)]="password" required />
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-md-6">
+
+                    <div class="form-group">
+                      <label class="form-control-label text-white fw-bold fs-5">Account type</label>
+
+                      <select name="acc" id="accounttype" [(ngModel)]="accounttype" class="form-select">
+                        <option disabled selected>account type</option>
+                        <option class="text-black fw-bold" value="savings">Savings</option>
+                        <option class="text-black fw-bold" value="current">Current</option>
+                      </select>
+
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+
+                    <div class="form-group">
+                      <label style="font-size: 15px;" class="form-control-label text-white fw-bold pt-2">Opening Balance</label>
+                      <input type="text" id="bal" name="bal" placeholder="Opening Balance" class="form-control"
+                        [(ngModel)]="availableBalance" pattern="[0-9]{2,}" required />
+                    </div>
+                  </div>
+                </div>
+
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="form-group">
+                      <label class="form-control-label text-white fw-bold fs-5">Gender</label>
+
+                      <select name="gen" id="gender" [(ngModel)]="gender" class="form-select">
+                        <option  disabled selected>Gender</option>
+                        <option class="text-black fw-bold" value="male">Male</option>
+                        <option class="text-black fw-bold" value="female">Female</option>
+                        <option class="text-black fw-bold" value="no">Prefer Not to Say</option>
+                      </select>
+
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+
+                    <div class="form-group">
+                      <label class="form-control-label text-white fw-bold fs-5">Branches</label>
+                      <select [(ngModel)]="selectedBranchId" name="selectedBranchId" id="selectedBranchId"
+                        class="form-select" required>
+                        <option value="" disabled selected>Select a branch</option>
+                        <option class="text-black fw-bold" *ngFor="let branch of branches" [value]="branch._id">{{ branch.branchName }}</option>
+                      </select>
+                    </div>
+                  </div>
+                </div>
+
+
+
+
+
+
+                <div class="form-group">
+                  <label class="form-control-label text-white fw-bold fs-5 ">Confirm Password</label>
+                  <input type="password" id="cpsw" name="cpsw" placeholder="Confirm Password" class="form-control"
+                    [(ngModel)]="confirmPassword" required />
+                </div>
+
+                <div class="row justify-content-center my-3 px-3">
+                  <button type="submit" class="btn-block btn-color fw-bold" [disabled]="signupForm.invalid">
+                    Signup to BudgetBuddy
+                  </button>
+                </div>
+              </form>
             </div>
           </div>
-          <div class="card card1">
-            <div class="row justify-content-center my-auto">
-              <div class="col-md-8 col-10">
-                <h3 class="mb-5 text-center heading">We are BudgetBuddy</h3>
-                <h6 class="msg-info">Please Signup Using Email</h6>
-  
-                <form #signupForm="ngForm" (ngSubmit)="registernow()">
+          <div class="bottom text-center mb-3">
+            <p class="sm-text mx-auto mb-3">
+              Already have an account?
+              <button class="btn btn-white ml-2" routerLink="">
+                <a class="fw-bold" id="login-link" routerLink="/login">Login</a>
+              </button>
+            </p>
 
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="form-control-label text-muted">Username</label>
-                                <input
-                                  type="text"
-                                  id="username"
-                                  name="username"
-                                  placeholder="Username"
-                                  class="form-control"
-                                  [(ngModel)]="username"
-                                  required
-                                />
-                              </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="form-control-label text-muted">Email</label>
-                                <input
-                                  type="email"
-                                  id="email"
-                                  name="email"
-                                  placeholder="Email"
-                                  class="form-control"
-                                  [(ngModel)]="email"
-                                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-                                  required
-                                />
-                                </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="form-control-label text-muted">Email</label>
-                                <input
-                                  type="text"
-                                  id="mobile"
-                                  name="mobile"
-                                  placeholder="Mobile"
-                                  class="form-control"
-                                  [(ngModel)]="mobile"
-                                  pattern="[0-9]{10}"
-                                  required
-                                />
-                               
-                              </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="form-control-label text-muted">Password</label>
-                                <input
-                                  type="password"
-                                  id="psw"
-                                  name="psw"
-                                  placeholder="Password"
-                                  class="form-control"
-                                  [(ngModel)]="password"
-                                  required
-                                />
-                              </div>
-                        </div>
-                    </div>
-                  
-                    <div class="row">
-                        <div class="col-md-6">
-
-                            <div class="form-group">
-                                <label class="form-control-label text-muted">Account type</label>
-                                
-                                <select name="acc" id="accounttype" [(ngModel)]="accounttype" class="form-select" >
-                                    <option disabled selected>account type</option>
-                                    <option value="savings">savings</option>
-                                    <option value="current">Current</option>
-                                </select>
-                                
-                                </div>
-                        </div>
-                        <div class="col-md-6">
-
-                            <div class="form-group">
-                                <label class="form-control-label text-muted">Opening Balance</label>
-                                <input
-                                  type="text"
-                                  id="bal"
-                                  name="bal"
-                                  placeholder="Opening Balance"
-                                  class="form-control"
-                                  [(ngModel)]="availableBalance"
-                                  pattern="[0-9]{2,}"
-                                  required
-                                />
-                              </div>
-                        </div>
-                    </div>
-                    
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label class="form-control-label text-muted">Gender</label>
-                                
-                                <select name="gen" id="gender" [(ngModel)]="gender" class="form-select" >
-                                    <option disabled selected>Gender</option>
-                                    <option value="male">Male</option>
-                                    <option value="female">Female</option>
-                                    <option value="no">Prefer Not to Say</option>
-                                </select>
-                                
-                                </div>
-                        </div>
-                        <div class="col-md-6">
-
-                            <div class="form-group">
-                                <label class="form-control-label text-muted">Branches</label>
-                                <select 
-                                  [(ngModel)]="selectedBranchId" 
-                                  name="selectedBranchId" 
-                                  id="selectedBranchId" 
-                                  class="form-select" 
-                                  required>
-                                  <option value="" disabled selected>Select a branch</option>
-                                  <option *ngFor="let branch of branches" [value]="branch._id">{{ branch.branchName }}</option>
-                                </select>
-                              </div>
-                        </div>
-                    </div>
-                  
-                  
-
-                    
-
-
-                  <div class="form-group">
-                    <label class="form-control-label text-muted"
-                      >Confirm Password</label
-                    >
-                    <input
-                      type="password"
-                      id="cpsw"
-                      name="cpsw"
-                      placeholder="Confirm Password"
-                      class="form-control"
-                      [(ngModel)]="confirmPassword"
-                      required
-                    />
-                  </div>
-  
-                  <div class="row justify-content-center my-3 px-3">
-                    <button
-                      type="submit"
-                      class="btn-block btn-color"
-                      [disabled]="signupForm.invalid"
-                    >
-                      Signup to BudgetBuddy
-                    </button>
-                  </div>
-                </form>
-              </div>
-            </div>
-            <div class="bottom text-center mb-3">
-              <p class="sm-text mx-auto mb-3">
-                Already have an account?
-                <button class="btn btn-white ml-2" routerLink="">
-                  <a id="login-link" routerLink="/login">Login</a>
-                </button>
-              </p>
-             
-            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <router-outlet></router-outlet>
-  
+</div>
+<router-outlet></router-outlet>
